Fixed the bug where the header buttons were too big.

--- a/electron-vite-project/src/components/Header.css
+++ b/electron-vite-project/src/components/Header.css
@@ -53,6 +53,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    gap: 40px;
 }
 
 @media (min-width: 768px) {
@@ -63,7 +64,7 @@
 
 .headerButton {
     position: relative;
-    margin: 20px;
+    /* margin: 20px; */
     width: 178px;
     height: 39px;
     display: flex;
